--- a/src/components/display/localization/protein-list/protein-list.css
+++ b/src/components/display/localization/protein-list/protein-list.css
@@ -1,6 +1,7 @@
 .protein-nav__list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 .protein-nav__list li {
   display: inline;
@@ -9,6 +10,7 @@
 .protein-nav__list li a.protein-nav__list-link {
   background-color: var(--color-primary);
   border-radius: 0.2rem;
+  display: inline-block;
   margin: 0 0.5rem;
   padding: 0.2rem 0.5rem;
   transition: background-color 0.3s var(--timing-function);
